--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-	"ip":"TopeBurg.aternos.me",
-	"port": "30099",
+	"ip":"LifeSmpSteal1.aternos.me",
+	"port": "54120",
 	"name": "247AFKBOT",
 	"auto-night-skip":"true"
 }
